# cmake-deps-bug-12564

./: build.sh  rebuild.sh
app/: CMakeLists.txt  conanfile.py
app/src/: main.cpp
libs/: CMakeLists.txt  conanfile.py
libs/include/: hellolib1.h  hellolib2.h  hellolib3.h
libs/src/: hellolib1.cpp  hellolib2.cpp  hellolib3.cpp
